# htcpcp-server

./: .gitignore  Dockerfile  Dockerfile.lambda  README.md  build_docker.sh  docker-compose-db.yaml  docker-compose-dev.yaml  docker-compose-registry.yaml  docker-compose.yaml  pyproject.toml  template.yaml
.github/workflows/: inspect-test-release.yml
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js  user-guide.html
docs/_sources/: index.rst.txt  user-guide.rst.txt
docs_source/: Architecture.drawio  conf.py
iac/aws/: Readme.md
iac/aws/policies/: access-parameter-store-policy.json  cognito-admin-policy.json  ecr-access-policy.json  ecs-execution-role-policy.json  ecs-task-role-policy.json  ecs-trust-policy-complete.json  ecs-trust-policy.json  glue-read-write-policy.json  register-target-policy.json  sns-policy.json
iac/aws/src/: data_volumes.json.tmpl  ecr_access_policy.json  mongodb_replication_task_mapping.json  mongodb_replication_task_settings.json  mysql_postgres_replication_task_mapping.json  mysql_postgres_replication_task_settings.json  mysql_replication_task_mapping.json  mysql_replication_task_settings.json  task_container_definition.json  task_cron_container_definition.json  task_mongodb_container_definition.json  task_mongodb_container_definition_no_credentials.json  task_service_container_definition.json  task_service_test_container_definition.json  (+3 more)
src/htcpcp/: application.py  exception_handlers.py  lambda_main.py  lifespan.py  main.py  routes.py
tests/: dependencies.py
tests/0.APITesting/: bruno.json
(+59 files in other folders)
